--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@ Aceptación de los Términos: Al acceder o utilizar nuestra aplicación, aceptas
 Uso de la Aplicación: (a) Solo puedes utilizar la aplicación con fines educativos y no para cualquier actividad ilegal o inapropiada. (b) No debes modificar, adaptar o hackear la aplicación o modificar otra página web para implicar falsamente que está asociada con nuestra aplicación. (c) No debes intentar obtener acceso no autorizado a la aplicación o a cualquier red relacionada.\n\n
 Ley Aplicable: Estos Términos y Condiciones se regirán e interpretarán de acuerdo con las leyes del [país o jurisdicción], sin tener en cuenta sus disposiciones sobre conflictos de leyes.\n\n
 Al utilizar nuestra aplicación, aceptas estos Términos y Condiciones. Si no estás de acuerdo con alguno de estos términos, te pedimos que no utilices nuestra aplicación. Si tienes alguna pregunta sobre estos Términos y Condiciones, contáctanos en [correo electrónico de contacto].</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
